# cor-iesu-django

./: .gitignore  .htaccess  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/: manage.py
src/adoration/: admin.py  apps.py  const.py  models.py  urls.py  views.py
src/adoration/templates/adoration/: assignments.html.jinja2  base.html.jinja2
src/cor_iesu/: asgi.py  settings.py  urls.py  wsgi.py
